--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ description = "Databricks Unity Catalog schema extractor"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "databricks-sdk>=0.49.0",
+    # >=0.64.0 as we use 'entity_tag_assignments'
+    "databricks-sdk>=0.64.0",
     "pydantic>=2.0",
     "pyyaml>=6.0",
     "typer>=0.12",
